[package]
name = "onc-rpc"
version = "0.3.0"
authors = ["Dom Dwyer <dom@itsallbroken.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "BSD-3-Clause"
description = "Open Network Computing / Sun RPC types and fast serialisation"
readme = "README.md"
documentation = "https://docs.rs/onc-rpc"
repository = "https://github.com/domodwyer/onc-rpc"
keywords = ["onc", "rpc", "sun", "protocol", "xdr"]
categories = ["network-programming", "encoding", "api-bindings"]

[dependencies]
thiserror = "2.0.12"
byteorder = "1.5.0"
bytes = { version = "1.10.1", optional = true }

[dev-dependencies]
hex-literal = "0.4.1"
criterion = "0.5.1"
proptest = { version = "1.6.0", default-features = false, features = ["alloc", "std"] }

[[bench]]
name = "bench"
harness = false
required-features = ["bytes"]

[features]
default = ["bytes"]
bytes = ["dep:bytes"]
